--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,80 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
 pool:
   vmImage: ubuntu-latest
 
+
+variables:
+  applicationUrl: 'https://demo.testfire.net'
+
 steps:
+
 - script: echo Hello, world!
+
   displayName: 'Run a one-line script'
 
+
+
 - script: |
+
     echo Add other tasks to build, test, and deploy your project.
+
     echo See https://aka.ms/yaml
+
   displayName: 'Run a multi-line script'
+
+
+
+- task: DockerInstaller@0
+
+  inputs:
+
+    dockerVersion: '17.09.0-ce'
+
+- task: Bash@3
+
+  inputs:
+
+    targetType: 'inline'
+
+    script: |
+
+      chmod -R 777  ./
+
+      docker pull owasp/zap2docker-stable
+
+      docker run --rm  -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-full-scan.py -t $(applicationUrl) -g gen.conf -x OWASP-ZAP-Report.xml -r scan-report.html
+      true 
+
+
+- task: PowerShell@2
+
+  inputs:
+
+    targetType: 'inline'
+
+    script: |
+
+       $XslPath = "$($Env:SYSTEM_DEFAULTWORKINGDIRECTORY)/OWASPToNUnit3.xslt"
+
+       $XmlInputPath = "$($Env:SYSTEM_DEFAULTWORKINGDIRECTORY)/OWASP-ZAP-Report.xml"
+
+       $XmlOutputPath = "$($Env:SYSTEM_DEFAULTWORKINGDIRECTORY)/Converted-OWASP-ZAP-Report.xml"
+
+       $XslTransform = New-Object System.Xml.Xsl.XslCompiledTransform
+
+       $XslTransform.Load($XslPath)
+
+       $XslTransform.Transform($XmlInputPath, $XmlOutputPath)
+
+
+
+- task: PublishTestResults@2
+
+  inputs:
+
+     testResultsFormat: 'NUnit'
+
+     testResultsFiles: '**/Converted-OWASP-ZAP-Report.xml'
+
